# Task_flight_ws

./: .gitignore  README.md  drone_field.sdf  setup_project.sh  test_mission.sh
drone_field_meshes/: cyl_r0075_h030.stl  cyl_r0100_h015.stl  cyl_r0100_h030.stl  cyl_r0125_h030.stl
src/px4_control_dds/: package.xml  setup.cfg  setup.py
src/px4_control_dds/config/: mission_params.yaml
src/px4_control_dds/launch/: mission_control.launch.py
src/px4_control_dds/px4_control_dds/: __init__.py  mission_control_node.py  mission_control_node_v2.py
src/px4_control_dds/scripts/: start_mission_dds.sh
