<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_control_dds</name>
  <version>0.1.0</version>
  <description>PX4+ROS2+Gazebo 四旋翼圆筒穿越任务控制器 (micro-XRCE-DDS)</description>
  <maintainer email="llc@todo.todo">llc</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
